# LearningAssistant

./: .env  .gitignore  README.md  docker-compose.yml
.github/workflows/: deployment.yml
Airflow/: docker-compose.yml
fastapi/: .dockerignore  Dockerfile  config.py  lessons.py  main.py  pyproject.toml  syllabus.py  utils.py
fastapi/fastapi_env/: pyvenv.cfg
streamlit/: .dockerignore  app.py  pyproject.toml
streamlit/streamlit_env/: pyvenv.cfg
streamlit/ui/: lesson.py  planner.py  plans.py  quiz.py
