[tool.poetry]
name = "fastapi_config"
version = "0.1.0"
description = ""
authors = ["dhirthacker7neu <thacker.dh@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
python-dotenv = "^1.0.1"
snowflake-connector-python = "^3.12.3"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
